fix: overflow shows

--- a/app/shows/profshow.module.scss
+++ b/app/shows/profshow.module.scss
@@ -6,29 +6,18 @@
 
 .profshow {
   position: relative;
-  top: 0;
+  // top: 0;
   // padding-top: 2rem;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 
-  @media (max-width: 4000px) and (min-width: 2200px) {
-    // padding-top: 5rem;
-    overflow-x: hidden;
-  }
-
-  @media (max-width: 2200px) and (min-width: 1850px) {
-    // padding-top: 3rem;
-  }
-
-  @media (max-width: 1850px) and (min-width: 1500px) {
-    // padding-top: 3rem;
-  }
-
   .backBtn {
+    cursor: pointer;
     position: absolute;
     top: 3rem;
     left: 6rem;
+    z-index: 10;
 
     @media screen and (max-width: 960px) {
       top: 1rem;
@@ -69,7 +58,7 @@
 }
 
 .pageContent {
-  padding: 2rem;
+  // padding: 2rem;
   .eventName {
     max-width: 90%;
     right: 2rem;
